subiendo imagenes e iconos

--- a/index.html
+++ b/index.html
@@ -24,17 +24,9 @@
         </aside>
         <section class="articles">
             <article id="about_me">
+                <h1>About me</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum reprehenderit quis numquam eaque ex, ut quasi 
-                    iusto asperiores consequatur eum porro vel deserunt esse qui cumque repellendus veritatis ipsa repudiandae.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum reprehenderit quis numquam eaque ex, ut quasi 
-                    iusto asperiores consequatur eum porro vel deserunt esse qui cumque repellendus veritatis ipsa repudiandae.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum reprehenderit quis numquam eaque ex, ut quasi 
-                    iusto asperiores consequatur eum porro vel deserunt esse qui cumque repellendus veritatis ipsa repudiandae.
+                    Soy un programador autodidacta, apasionado por la tecnología y la programación, actualmente estoy cursando la tecnicatura en software. ¡Estoy en busca de mi primer trabajo formal o pasantía como programador, buscando nuevos retos y desafíos!
                 </p>
             </article>
             <article id="portfolio">
