--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <main class="main">
         <aside class="personal">
             <img src="/images/usuario.png" alt="Imagen de usuario aqui" srcset="">
+            <div class="titulo">
+                <h1>Hola!, Mi nombre es leiva mauro soy desarrollador de sofware<span>&#160;</span></h1>
+            </div>
             <ul>
                 <li><p><a href="#about_me">About me</a></p></li>
                 <li><p><a href="#portfolio">Portfolio</a></p></li>
@@ -27,7 +30,7 @@
             <article id="about_me">
                 <h1>About me</h1>
                 <p>
-                    Soy un programador autodidacta, apasionado por la tecnología y la programación, actualmente estoy cursando la tecnicatura en software. ¡Estoy en busca de mi primer trabajo formal o pasantía como programador, buscando nuevos retos y desafíos!
+                    Soy un programador autodidacta, apasionado por la tecnología y la programación, actualmente estoy cursando la tecnicatura en desarrollo de software. ¡Estoy en busca de mi primer trabajo formal o pasantía como programador para crecer profecionalmente y absorber la experiencia necesaria para contribur cada vez mas al grupo de trabajo!
                 </p>
             </article>
             <article id="portfolio">
@@ -43,17 +46,13 @@
                 <!-- estudios -->
             </article>
         </section>
-        <!-- estilos -->
-        <!-- boton arriba a la derecha para cambiar de modo oscuro a modo light -->
-        <!-- el aside tendra un color mas claro que el section -->
-        <!-- los articles van a tener el mismo color que los aside y estaran separados entre si y envueltos en rectangulos -->
-        <!-- el fondo del lado derecho sera del color del section -->
     </main>
 
     <footer id="contacts">
         <h1>Contacts</h1>
-        <h3>Leiva Mauro</h3>
+        <h4>Leiva Mauro</h4>
         <!-- aqui datos de contactos -->
+
     </footer>
     <!-- aplicacion js -->
     <script src="/js/app.js"></script>
