ajustes 13 de marzo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <aside class="personal">
             <img src="/images/usuario.png" alt="Imagen de usuario aqui" srcset="">
             <div class="titulo">
-                <h1>Hola!, Mi nombre es leiva mauro soy desarrollador de sofware<span>&#160;</span></h1>
+                <h1>Hola!, Mi nombre es Mauro soy desarrollador de sofware<span>&#160;</span></h1>
             </div>
             <ul>
                 <li><p><a href="#about_me">About me</a></p></li>
