ajustes estructura grid

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header>
-        <div id="dark-mode-btn"><p>light</p></div>
+        <div id="dark-mode-btn" class="moon-mode-btn"></div>
     </header>
     <main class="main">
         <aside class="personal">
             <img src="/images/usuario.png" alt="Imagen de usuario aqui" srcset="">
             <div class="titulo">
-                <h1>Hola!, Mi nombre es Mauro soy desarrollador de sofware<span>&#160;</span></h1>
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente impedit.<span>&#160;</span></h1><!-- Hola!, Mi nombre es Mauro soy desarrollador de sofware -->
             </div>
             <ul>
                 <li><p><a href="#about_me">About me</a></p></li>
@@ -38,8 +38,18 @@
                 <!-- portfolio -->
             </article>
             <article id="skills">
-                <h1>Technical Skills</h1>
                 <!-- skills -->
+                <h1>Technical Skills</h1>
+                <div class="skills-container">
+                    <div class="skill"><img src="./icons/bootstrap.png" alt="BOOTSTRAP"></div>
+                    <div class="skill"><img src="./icons/css.png" alt="CSS"></div>
+                    <div class="skill"><img src="./icons/git.png" alt="GIT"></div>
+                    <div class="skill"><img src="./icons/html.png" alt="HTML"></div>
+                    <div class="skill"><img src="./icons/Java.png" alt="JAVA"></div>
+                    <div class="skill"><img src="./icons/js.png" alt="JAVASCRIPT"></div>
+                    <div class="skill"><img src="./icons/postgreSQL.png" alt="POSTGRESQL"></div>
+                    <div class="skill"><img src="./icons/sass.png" alt="SASS"></div>
+                </div>
             </article>
             <article id="studies">
                 <h1>My studies</h1>
